[package]
name = "distributed_kv_store"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.7"

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.56"
crc = "3.0.0"
prost = "0.10.4"
prost-types = "0.10.1"
tokio = { version = "1.20.0", features = ["fs", "rt-multi-thread", "io-util", "macros"] }
tokio-byteorder = "0.3.0"
tokio-stream = {version = "0.1.9", features = ["net"]}
tonic = "0.7.2"
uuid = { version = "1.1.2", features = ["v4"] }

[dev-dependencies]
mockall = "0.11.1"
proptest = "1.0.0"
proptest-derive = "0.3.0"
rand = "0.8.5"

